// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`characterization: lofting + tessellation > curvy: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 21608440469,
  "max": [
    100,
    24.999475,
    6,
  ],
  "min": [
    0,
    -24.999475,
    0.000063159976,
  ],
  "normalSum": [
    0.000001129823,
    -0.0000019373605,
    481.93959,
  ],
  "positionSum": [
    2120100,
    0,
    143942.59,
  ],
  "steps": {
    "lengthSteps": 200,
    "ringSteps": 214,
  },
  "triangles": 84800,
  "vertices": 42402,
}
`;

exports[`characterization: lofting + tessellation > curvy: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 265219990,
  "max": [
    100,
    25,
    6,
  ],
  "min": [
    0,
    -25,
    7.2701422e-32,
  ],
  "normalSum": [
    1.1813222e-7,
    -0.0000013674934,
    52.811569,
  ],
  "positionSum": [
    234600,
    0,
    15969.459,
  ],
  "steps": {
    "lengthSteps": 67,
    "ringSteps": 72,
  },
  "triangles": 9380,
  "vertices": 4692,
}
`;

exports[`characterization: lofting + tessellation > curvy: specs, sections and lofted rings 1`] = `
{
  "area": 3520.0068,
  "centerOfMass": 49.999415,
  "length": 100,
  "maxThickness": 6,
  "maxWidth": 50,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          3.7209274,
        ],
        [
          1.0646071,
          3.7481907,
        ],
        [
          2.0605588,
          3.8402801,
        ],
        [
          2.7658183,
          4.0339736,
        ],
        [
          2.7312578,
          4.2692566,
        ],
        [
          1.9966217,
          4.4887657,
        ],
        [
          1.0216524,
          4.6083729,
        ],
        [
          -9.1152749e-16,
          4.6473399,
        ],
        [
          -1.0216524,
          4.6083729,
        ],
        [
          -1.9966217,
          4.4887657,
        ],
        [
          -2.7312578,
          4.2692566,
        ],
        [
          -2.7658183,
          4.0339736,
        ],
        [
          -2.0605588,
          3.8402801,
        ],
        [
          -1.0646071,
          3.7481907,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          2.7658183,
          0.4168856,
        ],
        [
          0,
          0.92641244,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          0.95,
        ],
        [
          7.5904639,
          1.0886626,
        ],
        [
          14.70663,
          1.5551421,
        ],
        [
          19.852629,
          2.5191897,
        ],
        [
          19.630033,
          3.8844049,
        ],
        [
          14.263803,
          5.003912,
        ],
        [
          7.286119,
          5.6138355,
        ],
        [
          -3.6756612e-15,
          5.8125,
        ],
        [
          -7.286119,
          5.6138355,
        ],
        [
          -14.263803,
          5.003912,
        ],
        [
          -19.630033,
          3.8844049,
        ],
        [
          -19.852629,
          2.5191897,
        ],
        [
          -14.70663,
          1.5551421,
        ],
        [
          -7.5904639,
          1.0886626,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          19.852629,
          2.188125,
        ],
        [
          0,
          4.8625,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          1.7763568e-15,
        ],
        [
          9.5557813,
          0.17083018,
        ],
        [
          18.5153,
          0.7454223,
        ],
        [
          25,
          1.9314247,
        ],
        [
          24.721375,
          3.6245478,
        ],
        [
          17.958563,
          5.0037267,
        ],
        [
          9.1727437,
          5.7552192,
        ],
        [
          0,
          6,
        ],
        [
          -9.1727437,
          5.7552192,
        ],
        [
          -17.958563,
          5.0037267,
        ],
        [
          -24.721375,
          3.6245478,
        ],
        [
          -25,
          1.9314247,
        ],
        [
          -18.5153,
          0.7454223,
        ],
        [
          -9.5557813,
          0.17083018,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          25,
          2.7,
        ],
        [
          0,
          6,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          0.95,
        ],
        [
          7.5904639,
          1.0886626,
        ],
        [
          14.70663,
          1.5551421,
        ],
        [
          19.852629,
          2.5191897,
        ],
        [
          19.630033,
          3.8844049,
        ],
        [
          14.263803,
          5.003912,
        ],
        [
          7.286119,
          5.6138355,
        ],
        [
          3.6756612e-15,
          5.8125,
        ],
        [
          -7.286119,
          5.6138355,
        ],
        [
          -14.263803,
          5.003912,
        ],
        [
          -19.630033,
          3.8844049,
        ],
        [
          -19.852629,
          2.5191897,
        ],
        [
          -14.70663,
          1.5551421,
        ],
        [
          -7.5904639,
          1.0886626,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          19.852629,
          2.188125,
        ],
        [
          0,
          4.8625,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          3.7209274,
        ],
        [
          1.0646071,
          3.7481907,
        ],
        [
          2.0605588,
          3.8402801,
        ],
        [
          2.7658183,
          4.0339736,
        ],
        [
          2.7312578,
          4.2692566,
        ],
        [
          1.9966217,
          4.4887657,
        ],
        [
          1.0216524,
          4.6083729,
        ],
        [
          0,
          4.6473399,
        ],
        [
          -1.0216524,
          4.6083729,
        ],
        [
          -1.9966217,
          4.4887657,
        ],
        [
          -2.7312578,
          4.2692566,
        ],
        [
          -2.7658183,
          4.0339736,
        ],
        [
          -2.0605588,
          3.8402801,
        ],
        [
          -1.0646071,
          3.7481907,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          2.7658183,
          0.4168856,
        ],
        [
          0,
          0.92641244,
        ],
      ],
    },
  ],
  "volume": 13612.603,
}
`;

exports[`characterization: lofting + tessellation > default step counts (no target face size) 1`] = `
[
  5522,
  11040,
]
`;

exports[`characterization: lofting + tessellation > extreme rocker: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 48046140,
  "max": [
    100,
    20,
    65,
  ],
  "min": [
    0,
    -20,
    0,
  ],
  "normalSum": [
    -5.9604645e-8,
    0.0000083483756,
    -1.4901161e-8,
  ],
  "positionSum": [
    100100,
    -1.4210855e-12,
    65065,
  ],
  "steps": {
    "lengthSteps": 200,
    "ringSteps": 12,
  },
  "triangles": 4000,
  "vertices": 2002,
}
`;

exports[`characterization: lofting + tessellation > extreme rocker: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 5402350,
  "max": [
    100,
    20,
    65,
  ],
  "min": [
    0,
    -20,
    0,
  ],
  "normalSum": [
    -2.9802322e-8,
    0.0006868355,
    2.9802322e-8,
  ],
  "positionSum": [
    33600,
    -4.7606363e-13,
    21840,
  ],
  "steps": {
    "lengthSteps": 67,
    "ringSteps": 12,
  },
  "triangles": 1340,
  "vertices": 672,
}
`;

exports[`characterization: lofting + tessellation > extreme rocker: specs, sections and lofted rings 1`] = `
{
  "area": 4000,
  "centerOfMass": 50,
  "length": 100,
  "maxThickness": 5,
  "maxWidth": -Infinity,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          1.2,
        ],
        [
          8.142978,
          1.2,
        ],
        [
          16.285956,
          1.2,
        ],
        [
          20,
          1.5222596,
        ],
        [
          20,
          5.8777404,
        ],
        [
          16.285956,
          6.2,
        ],
        [
          8.142978,
          6.2,
        ],
        [
          -3.5527137e-15,
          6.2,
        ],
        [
          -8.142978,
          6.2,
        ],
        [
          -16.285956,
          6.2,
        ],
        [
          -20,
          5.8777404,
        ],
        [
          -20,
          1.5222596,
        ],
        [
          -16.285956,
          1.2,
        ],
        [
          -8.142978,
          1.2,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          15,
        ],
        [
          8.142978,
          15,
        ],
        [
          16.285956,
          15,
        ],
        [
          20,
          15.32226,
        ],
        [
          20,
          19.67774,
        ],
        [
          16.285956,
          20,
        ],
        [
          8.142978,
          20,
        ],
        [
          -3.5527137e-15,
          20,
        ],
        [
          -8.142978,
          20,
        ],
        [
          -16.285956,
          20,
        ],
        [
          -20,
          19.67774,
        ],
        [
          -20,
          15.32226,
        ],
        [
          -16.285956,
          15,
        ],
        [
          -8.142978,
          15,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          30,
        ],
        [
          8.142978,
          30,
        ],
        [
          16.285956,
          30,
        ],
        [
          20,
          30.32226,
        ],
        [
          20,
          34.67774,
        ],
        [
          16.285956,
          35,
        ],
        [
          8.142978,
          35,
        ],
        [
          -3.5527137e-15,
          35,
        ],
        [
          -8.142978,
          35,
        ],
        [
          -16.285956,
          35,
        ],
        [
          -20,
          34.67774,
        ],
        [
          -20,
          30.32226,
        ],
        [
          -16.285956,
          30,
        ],
        [
          -8.142978,
          30,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          45,
        ],
        [
          8.142978,
          45,
        ],
        [
          16.285956,
          45,
        ],
        [
          20,
          45.32226,
        ],
        [
          20,
          49.67774,
        ],
        [
          16.285956,
          50,
        ],
        [
          8.142978,
          50,
        ],
        [
          -3.5527137e-15,
          50,
        ],
        [
          -8.142978,
          50,
        ],
        [
          -16.285956,
          50,
        ],
        [
          -20,
          49.67774,
        ],
        [
          -20,
          45.32226,
        ],
        [
          -16.285956,
          45,
        ],
        [
          -8.142978,
          45,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          58.8,
        ],
        [
          8.142978,
          58.8,
        ],
        [
          16.285956,
          58.8,
        ],
        [
          20,
          59.12226,
        ],
        [
          20,
          63.47774,
        ],
        [
          16.285956,
          63.8,
        ],
        [
          8.142978,
          63.8,
        ],
        [
          -3.5527137e-15,
          63.8,
        ],
        [
          -8.142978,
          63.8,
        ],
        [
          -16.285956,
          63.8,
        ],
        [
          -20,
          63.47774,
        ],
        [
          -20,
          59.12226,
        ],
        [
          -16.285956,
          58.8,
        ],
        [
          -8.142978,
          58.8,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
  ],
  "volume": 19896.02,
}
`;

exports[`characterization: lofting + tessellation > funboard: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 135581172352,
  "max": [
    228.60001,
    27.304962,
    16.657467,
  ],
  "min": [
    0,
    -27.304962,
    0.000010735514,
  ],
  "normalSum": [
    -334.17909,
    0.59318472,
    3344.9758,
  ],
  "positionSum": [
    12145289,
    0,
    568138.17,
  ],
  "steps": {
    "lengthSteps": 458,
    "ringSteps": 235,
  },
  "triangles": 212512,
  "vertices": 106258,
}
`;

exports[`characterization: lofting + tessellation > funboard: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 1625943839,
  "max": [
    228.60001,
    27.304993,
    16.657467,
  ],
  "min": [
    0,
    -27.304993,
    0.00018890965,
  ],
  "normalSum": [
    -46.279232,
    0.0087780014,
    370.07052,
  ],
  "positionSum": [
    1329309,
    0,
    62558.052,
  ],
  "steps": {
    "lengthSteps": 153,
    "ringSteps": 79,
  },
  "triangles": 23256,
  "vertices": 11630,
}
`;

exports[`characterization: lofting + tessellation > funboard: specs, sections and lofted rings 1`] = `
{
  "area": 9878.39,
  "centerOfMass": 111.89237,
  "length": 228.6,
  "maxThickness": 6.9854165,
  "maxWidth": 54.61,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          7.0400961,
        ],
        [
          3.8446036,
          7.0557463,
        ],
        [
          7.5681694,
          7.0639956,
        ],
        [
          8.369256,
          7.2326639,
        ],
        [
          8.245239,
          8.2090476,
        ],
        [
          6.5930716,
          8.6508416,
        ],
        [
          3.4917371,
          8.8657635,
        ],
        [
          0,
          8.9277462,
        ],
        [
          -3.4917371,
          8.8657635,
        ],
        [
          -6.5930716,
          8.6508416,
        ],
        [
          -8.245239,
          8.2090476,
        ],
        [
          -8.369256,
          7.2326639,
        ],
        [
          -7.5681694,
          7.0639956,
        ],
        [
          -3.8446036,
          7.0557463,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          8.3456582,
          0.023739477,
        ],
        [
          8.3691132,
          0.90281929,
        ],
        [
          7.8219723,
          1.3959447,
        ],
        [
          0,
          1.8876501,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          1.7871101,
        ],
        [
          10.931649,
          1.9989358,
        ],
        [
          21.520827,
          2.0339784,
        ],
        [
          24.013786,
          2.5108638,
        ],
        [
          23.40704,
          5.1161442,
        ],
        [
          18.732542,
          6.5318855,
        ],
        [
          9.9288384,
          7.3255768,
        ],
        [
          0,
          7.554114,
        ],
        [
          -9.9288384,
          7.3255768,
        ],
        [
          -18.732542,
          6.5318855,
        ],
        [
          -23.40704,
          5.1161442,
        ],
        [
          -24.013786,
          2.5108638,
        ],
        [
          -21.520827,
          2.0339784,
        ],
        [
          -10.931649,
          1.9989358,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          23.131117,
          0.21574794,
        ],
        [
          24.013786,
          1.9376078,
        ],
        [
          22.101791,
          3.9566422,
        ],
        [
          0,
          5.7670039,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          0.0022305894,
        ],
        [
          12.446009,
          0.09491248,
        ],
        [
          24.499255,
          0.24607529,
        ],
        [
          27.304993,
          1.0820962,
        ],
        [
          26.608888,
          3.9976712,
        ],
        [
          21.314533,
          5.6893099,
        ],
        [
          11.299845,
          6.6607618,
        ],
        [
          -3.7901725e-15,
          6.9853081,
        ],
        [
          -11.299845,
          6.6607618,
        ],
        [
          -21.314533,
          5.6893099,
        ],
        [
          -26.608888,
          3.9976712,
        ],
        [
          -27.304993,
          1.0820962,
        ],
        [
          -24.499255,
          0.24607529,
        ],
        [
          -12.446009,
          0.09491248,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          25.55564,
          0.25469289,
        ],
        [
          27.304993,
          2.1899411,
        ],
        [
          24.750802,
          4.8508114,
        ],
        [
          0,
          6.9830775,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          2.1856527,
        ],
        [
          10.641254,
          2.257756,
        ],
        [
          20.946772,
          2.3759311,
        ],
        [
          23.412197,
          2.9780318,
        ],
        [
          22.817758,
          5.39849,
        ],
        [
          18.23446,
          6.6903745,
        ],
        [
          9.6625397,
          7.4242607,
        ],
        [
          0,
          7.6640554,
        ],
        [
          -9.6625397,
          7.4242607,
        ],
        [
          -18.23446,
          6.6903745,
        ],
        [
          -22.817758,
          5.39849,
        ],
        [
          -23.412197,
          2.9780318,
        ],
        [
          -20.946772,
          2.3759311,
        ],
        [
          -10.641254,
          2.257756,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          21.912244,
          0.19981307,
        ],
        [
          23.412197,
          1.770008,
        ],
        [
          21.222149,
          3.8402143,
        ],
        [
          0,
          5.4784026,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          13.395988,
        ],
        [
          3.5796687,
          13.397148,
        ],
        [
          7.0465307,
          13.39922,
        ],
        [
          7.9378703,
          13.435668,
        ],
        [
          7.7448833,
          14.092617,
        ],
        [
          6.1441163,
          14.288061,
        ],
        [
          3.2514708,
          14.401624,
        ],
        [
          -9.074782e-16,
          14.433307,
        ],
        [
          -3.2514708,
          14.401624,
        ],
        [
          -6.1441163,
          14.288061,
        ],
        [
          -7.7448833,
          14.092617,
        ],
        [
          -7.9378703,
          13.435668,
        ],
        [
          -7.0465307,
          13.39922,
        ],
        [
          -3.5796687,
          13.397148,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          7.4771228,
          0.003558357,
        ],
        [
          7.9378703,
          0.40487282,
        ],
        [
          7.2915722,
          0.7614995,
        ],
        [
          0,
          1.0373194,
        ],
      ],
    },
  ],
  "volume": 47360.322,
}
`;

exports[`characterization: lofting + tessellation > longboard: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 222581561411,
  "max": [
    274.32001,
    28.89249,
    15.328081,
  ],
  "min": [
    0,
    -28.89249,
    4.6014975e-7,
  ],
  "normalSum": [
    -518.06707,
    0.11178223,
    7733.9956,
  ],
  "positionSum": [
    18674883,
    0,
    746443.14,
  ],
  "steps": {
    "lengthSteps": 549,
    "ringSteps": 250,
  },
  "triangles": 272304,
  "vertices": 136154,
}
`;

exports[`characterization: lofting + tessellation > longboard: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 2706947994,
  "max": [
    274.32001,
    28.89249,
    15.328081,
  ],
  "min": [
    0,
    -28.89249,
    0.000081920785,
  ],
  "normalSum": [
    -43.549281,
    0.0056259452,
    858.23893,
  ],
  "positionSum": [
    2058497.3,
    0,
    82656.817,
  ],
  "steps": {
    "lengthSteps": 183,
    "ringSteps": 84,
  },
  "triangles": 30012,
  "vertices": 15008,
}
`;

exports[`characterization: lofting + tessellation > longboard: specs, sections and lofted rings 1`] = `
{
  "area": 12743.162,
  "centerOfMass": 135.51775,
  "length": 274.32,
  "maxThickness": 7.562776,
  "maxWidth": 57.785,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          7.610107,
        ],
        [
          4.4015508,
          7.6189243,
        ],
        [
          8.7258301,
          7.6355354,
        ],
        [
          9.6512367,
          7.9085408,
        ],
        [
          9.4073412,
          8.8921299,
        ],
        [
          7.2796257,
          9.4392141,
        ],
        [
          3.8126237,
          9.6691213,
        ],
        [
          0,
          9.7346032,
        ],
        [
          -3.8126237,
          9.6691213,
        ],
        [
          -7.2796257,
          9.4392141,
        ],
        [
          -9.4073412,
          8.8921299,
        ],
        [
          -9.6512367,
          7.9085408,
        ],
        [
          -8.7258301,
          7.6355354,
        ],
        [
          -4.4015508,
          7.6189243,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          9.5474606,
          0.028130771,
        ],
        [
          9.6512367,
          0.7322712,
        ],
        [
          8.7750653,
          1.5828371,
        ],
        [
          0,
          2.1244962,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          1.6111145,
        ],
        [
          11.255521,
          1.695006,
        ],
        [
          22.31296,
          1.8387074,
        ],
        [
          24.825324,
          2.8744629,
        ],
        [
          23.993653,
          5.2463481,
        ],
        [
          18.584691,
          6.8463194,
        ],
        [
          9.7460097,
          7.74146,
        ],
        [
          0,
          8.0330587,
        ],
        [
          -9.7460097,
          7.74146,
        ],
        [
          -18.584691,
          6.8463194,
        ],
        [
          -23.993653,
          5.2463481,
        ],
        [
          -24.825324,
          2.8744629,
        ],
        [
          -22.31296,
          1.8387074,
        ],
        [
          -11.255521,
          1.695006,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          22.653636,
          0.23154697,
        ],
        [
          24.825324,
          2.165858,
        ],
        [
          21.786957,
          4.5654094,
        ],
        [
          0,
          6.4219442,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          0.0017088255,
        ],
        [
          13.058609,
          0.097393608,
        ],
        [
          25.887448,
          0.25593066,
        ],
        [
          28.892491,
          1.5414461,
        ],
        [
          27.804034,
          4.1904963,
        ],
        [
          21.556957,
          6.1843886,
        ],
        [
          11.308614,
          7.2640946,
        ],
        [
          -3.0931303e-15,
          7.5611203,
        ],
        [
          -11.308614,
          7.2640946,
        ],
        [
          -21.556957,
          6.1843886,
        ],
        [
          -27.804034,
          4.1904963,
        ],
        [
          -28.892491,
          1.5414461,
        ],
        [
          -25.887448,
          0.25593066,
        ],
        [
          -13.058609,
          0.097393608,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          25.629795,
          0.25087379,
        ],
        [
          28.892491,
          2.3613192,
        ],
        [
          24.033852,
          5.6247792,
        ],
        [
          0,
          7.5594115,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          2.0820312,
        ],
        [
          11.715053,
          2.1106838,
        ],
        [
          23.224374,
          2.158208,
        ],
        [
          25.992836,
          3.081965,
        ],
        [
          25.030288,
          5.423389,
        ],
        [
          19.341766,
          6.9621952,
        ],
        [
          10.143161,
          7.8997426,
        ],
        [
          4.7597278e-15,
          8.2130411,
        ],
        [
          -10.143161,
          7.8997426,
        ],
        [
          -19.341766,
          6.9621952,
        ],
        [
          -25.030288,
          5.423389,
        ],
        [
          -25.992836,
          3.081965,
        ],
        [
          -23.224374,
          2.158208,
        ],
        [
          -11.715053,
          2.1106838,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          23.654921,
          0.076149591,
        ],
        [
          25.992836,
          1.893467,
        ],
        [
          23.02872,
          4.0621122,
        ],
        [
          0,
          6.1310099,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          12.717395,
        ],
        [
          4.373644,
          12.717484,
        ],
        [
          8.6705398,
          12.717912,
        ],
        [
          9.833946,
          12.723147,
        ],
        [
          9.4386391,
          13.302014,
        ],
        [
          7.2403391,
          13.512583,
        ],
        [
          3.7890067,
          13.626415,
        ],
        [
          1.4244331e-15,
          13.661974,
        ],
        [
          -3.7890067,
          13.626415,
        ],
        [
          -7.2403391,
          13.512583,
        ],
        [
          -9.4386391,
          13.302014,
        ],
        [
          -9.833946,
          12.723147,
        ],
        [
          -8.6705398,
          12.717912,
        ],
        [
          -4.373644,
          12.717484,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          9.6096232,
          0.00082773313,
        ],
        [
          9.833946,
          0.29709952,
        ],
        [
          8.0188589,
          0.73571534,
        ],
        [
          0,
          0.94457861,
        ],
      ],
    },
  ],
  "volume": 66073.595,
}
`;

exports[`characterization: lofting + tessellation > minimal control points (box): mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 48046140,
  "max": [
    100,
    20,
    5,
  ],
  "min": [
    0,
    -20,
    0,
  ],
  "normalSum": [
    0,
    0,
    0,
  ],
  "positionSum": [
    100100,
    -1.4210855e-12,
    5005,
  ],
  "steps": {
    "lengthSteps": 200,
    "ringSteps": 12,
  },
  "triangles": 4000,
  "vertices": 2002,
}
`;

exports[`characterization: lofting + tessellation > minimal control points (box): mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 5402350,
  "max": [
    100,
    20,
    5,
  ],
  "min": [
    0,
    -20,
    0,
  ],
  "normalSum": [
    0,
    0,
    0,
  ],
  "positionSum": [
    33600,
    -4.7606363e-13,
    1680,
  ],
  "steps": {
    "lengthSteps": 67,
    "ringSteps": 12,
  },
  "triangles": 1340,
  "vertices": 672,
}
`;

exports[`characterization: lofting + tessellation > minimal control points (box): specs, sections and lofted rings 1`] = `
{
  "area": 4000,
  "centerOfMass": 50,
  "length": 100,
  "maxThickness": 5,
  "maxWidth": -Infinity,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          0,
        ],
        [
          8.142978,
          0,
        ],
        [
          16.285956,
          0,
        ],
        [
          20,
          0.32225956,
        ],
        [
          20,
          4.6777404,
        ],
        [
          16.285956,
          5,
        ],
        [
          8.142978,
          5,
        ],
        [
          -3.5527137e-15,
          5,
        ],
        [
          -8.142978,
          5,
        ],
        [
          -16.285956,
          5,
        ],
        [
          -20,
          4.6777404,
        ],
        [
          -20,
          0.32225956,
        ],
        [
          -16.285956,
          0,
        ],
        [
          -8.142978,
          0,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          0,
        ],
        [
          8.142978,
          0,
        ],
        [
          16.285956,
          0,
        ],
        [
          20,
          0.32225956,
        ],
        [
          20,
          4.6777404,
        ],
        [
          16.285956,
          5,
        ],
        [
          8.142978,
          5,
        ],
        [
          -3.5527137e-15,
          5,
        ],
        [
          -8.142978,
          5,
        ],
        [
          -16.285956,
          5,
        ],
        [
          -20,
          4.6777404,
        ],
        [
          -20,
          0.32225956,
        ],
        [
          -16.285956,
          0,
        ],
        [
          -8.142978,
          0,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          0,
        ],
        [
          8.142978,
          0,
        ],
        [
          16.285956,
          0,
        ],
        [
          20,
          0.32225956,
        ],
        [
          20,
          4.6777404,
        ],
        [
          16.285956,
          5,
        ],
        [
          8.142978,
          5,
        ],
        [
          -3.5527137e-15,
          5,
        ],
        [
          -8.142978,
          5,
        ],
        [
          -16.285956,
          5,
        ],
        [
          -20,
          4.6777404,
        ],
        [
          -20,
          0.32225956,
        ],
        [
          -16.285956,
          0,
        ],
        [
          -8.142978,
          0,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          0,
        ],
        [
          8.142978,
          0,
        ],
        [
          16.285956,
          0,
        ],
        [
          20,
          0.32225956,
        ],
        [
          20,
          4.6777404,
        ],
        [
          16.285956,
          5,
        ],
        [
          8.142978,
          5,
        ],
        [
          -3.5527137e-15,
          5,
        ],
        [
          -8.142978,
          5,
        ],
        [
          -16.285956,
          5,
        ],
        [
          -20,
          4.6777404,
        ],
        [
          -20,
          0.32225956,
        ],
        [
          -16.285956,
          0,
        ],
        [
          -8.142978,
          0,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          0,
        ],
        [
          8.142978,
          0,
        ],
        [
          16.285956,
          0,
        ],
        [
          20,
          0.32225956,
        ],
        [
          20,
          4.6777404,
        ],
        [
          16.285956,
          5,
        ],
        [
          8.142978,
          5,
        ],
        [
          -3.5527137e-15,
          5,
        ],
        [
          -8.142978,
          5,
        ],
        [
          -16.285956,
          5,
        ],
        [
          -20,
          4.6777404,
        ],
        [
          -20,
          0.32225956,
        ],
        [
          -16.285956,
          0,
        ],
        [
          -8.142978,
          0,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20,
          0,
        ],
        [
          20,
          5,
        ],
        [
          0,
          5,
        ],
      ],
    },
  ],
  "volume": 19896.02,
}
`;

exports[`characterization: lofting + tessellation > shortboard (sLinear): mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 67919740600,
  "max": [
    187.96001,
    23.494926,
    13.958495,
  ],
  "min": [
    0,
    -23.494926,
    -0.26396301,
  ],
  "normalSum": [
    510.83168,
    -0.44737308,
    4487.7529,
  ],
  "positionSum": [
    7074551.3,
    0,
    323289.86,
  ],
  "steps": {
    "lengthSteps": 376,
    "ringSteps": 202,
  },
  "triangles": 150400,
  "vertices": 75202,
}
`;

exports[`characterization: lofting + tessellation > shortboard (sLinear): mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 832007750,
  "max": [
    187.96001,
    23.494923,
    13.958495,
  ],
  "min": [
    0,
    -23.494923,
    -0.26188558,
  ],
  "normalSum": [
    53.259114,
    0.34094033,
    500.68875,
  ],
  "positionSum": [
    782507.18,
    0,
    36037.112,
  ],
  "steps": {
    "lengthSteps": 126,
    "ringSteps": 68,
  },
  "triangles": 16632,
  "vertices": 8318,
}
`;

exports[`characterization: lofting + tessellation > shortboard (sLinear): specs, sections and lofted rings 1`] = `
{
  "area": 6719.3195,
  "centerOfMass": 89.864581,
  "length": 187.96,
  "maxThickness": 5.9641954,
  "maxWidth": 46.990002,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          5.873041,
        ],
        [
          3.6204677,
          5.8515998,
        ],
        [
          7.1119374,
          5.8291738,
        ],
        [
          7.6753047,
          6.0207548,
        ],
        [
          7.4972016,
          6.9063399,
        ],
        [
          5.9667641,
          7.1315763,
        ],
        [
          3.0189529,
          7.2652165,
        ],
        [
          -9.7358199e-16,
          7.3076661,
        ],
        [
          -3.0189529,
          7.2652165,
        ],
        [
          -5.9667641,
          7.1315763,
        ],
        [
          -7.4972016,
          6.9063399,
        ],
        [
          -7.6753047,
          6.0207548,
        ],
        [
          -7.1119374,
          5.8291738,
        ],
        [
          -3.6204677,
          5.8515998,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          7.6424752,
          -0.047376637,
        ],
        [
          7.6753047,
          0.73329801,
        ],
        [
          7.4700277,
          1.0376129,
        ],
        [
          0,
          1.434625,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          1.3705392,
        ],
        [
          9.7762341,
          1.3009764,
        ],
        [
          19.203522,
          1.1685613,
        ],
        [
          20.919414,
          1.7121045,
        ],
        [
          20.101893,
          3.9294738,
        ],
        [
          16.05963,
          4.9771565,
        ],
        [
          8.1435784,
          5.8770498,
        ],
        [
          -1.6733331e-15,
          6.233889,
        ],
        [
          -8.1435784,
          5.8770498,
        ],
        [
          -16.05963,
          4.9771565,
        ],
        [
          -20.101893,
          3.9294738,
        ],
        [
          -20.919414,
          1.7121045,
        ],
        [
          -19.203522,
          1.1685613,
        ],
        [
          -9.7762341,
          1.3009764,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20.104402,
          -0.21639625,
        ],
        [
          20.919414,
          1.1832157,
        ],
        [
          18.404527,
          3.0879335,
        ],
        [
          0,
          4.8633497,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          0.000039185233,
        ],
        [
          10.980445,
          -0.085770271,
        ],
        [
          21.568716,
          -0.25388547,
        ],
        [
          23.472343,
          0.66368011,
        ],
        [
          22.52311,
          3.0970611,
        ],
        [
          18.01733,
          4.3852254,
        ],
        [
          9.1447999,
          5.5379952,
        ],
        [
          3.5767024e-15,
          5.964226,
        ],
        [
          -9.1447999,
          5.5379952,
        ],
        [
          -18.01733,
          4.3852254,
        ],
        [
          -22.52311,
          3.0970611,
        ],
        [
          -23.472343,
          0.66368011,
        ],
        [
          -21.568716,
          -0.25388547,
        ],
        [
          -10.980445,
          -0.085770271,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          21.888238,
          -0.25977164,
        ],
        [
          23.472343,
          1.4054183,
        ],
        [
          18.406679,
          4.2873404,
        ],
        [
          0,
          5.9641868,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          1.7374763,
        ],
        [
          8.8498551,
          1.721146,
        ],
        [
          17.384234,
          1.6891051,
        ],
        [
          18.966448,
          2.3768304,
        ],
        [
          18.189284,
          4.2948386,
        ],
        [
          14.540182,
          5.2757447,
        ],
        [
          7.3743472,
          6.0762955,
        ],
        [
          8.778086e-16,
          6.3368289,
        ],
        [
          -7.3743472,
          6.0762955,
        ],
        [
          -14.540182,
          5.2757447,
        ],
        [
          -18.189284,
          4.2948386,
        ],
        [
          -18.966448,
          2.3768304,
        ],
        [
          -17.384234,
          1.6891051,
        ],
        [
          -8.8498551,
          1.721146,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          17.607051,
          -0.04970138,
        ],
        [
          18.966448,
          1.2344294,
        ],
        [
          14.87322,
          3.4568575,
        ],
        [
          0,
          4.5993526,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          11.351835,
        ],
        [
          1.4587434,
          11.35386,
        ],
        [
          2.865517,
          11.355792,
        ],
        [
          3.0369703,
          11.494606,
        ],
        [
          2.9849319,
          11.868803,
        ],
        [
          2.4023425,
          12.046794,
        ],
        [
          1.2159499,
          12.12495,
        ],
        [
          1.7035632e-15,
          12.159751,
        ],
        [
          -1.2159499,
          12.12495,
        ],
        [
          -2.4023425,
          12.046794,
        ],
        [
          -2.9849319,
          11.868803,
        ],
        [
          -3.0369703,
          11.494606,
        ],
        [
          -2.865517,
          11.355792,
        ],
        [
          -1.4587434,
          11.35386,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          3.0242354,
          0.0041575512,
        ],
        [
          3.0369327,
          0.38123907,
        ],
        [
          2.7646405,
          0.64647181,
        ],
        [
          0,
          0.80791626,
        ],
      ],
    },
  ],
  "volume": 27101.927,
}
`;

exports[`characterization: lofting + tessellation > shortboard: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 67919740600,
  "max": [
    187.96001,
    23.494926,
    13.958495,
  ],
  "min": [
    0,
    -23.494926,
    -0.26396301,
  ],
  "normalSum": [
    510.83168,
    -0.44737308,
    4487.7529,
  ],
  "positionSum": [
    7074551.3,
    0,
    323289.86,
  ],
  "steps": {
    "lengthSteps": 376,
    "ringSteps": 202,
  },
  "triangles": 150400,
  "vertices": 75202,
}
`;

exports[`characterization: lofting + tessellation > shortboard: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 832007750,
  "max": [
    187.96001,
    23.494923,
    13.958495,
  ],
  "min": [
    0,
    -23.494923,
    -0.26188558,
  ],
  "normalSum": [
    53.259114,
    0.34094033,
    500.68875,
  ],
  "positionSum": [
    782507.18,
    0,
    36037.112,
  ],
  "steps": {
    "lengthSteps": 126,
    "ringSteps": 68,
  },
  "triangles": 16632,
  "vertices": 8318,
}
`;

exports[`characterization: lofting + tessellation > shortboard: specs, sections and lofted rings 1`] = `
{
  "area": 6719.3195,
  "centerOfMass": 89.854447,
  "length": 187.96,
  "maxThickness": 5.9641954,
  "maxWidth": 46.990002,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          5.873041,
        ],
        [
          3.6204677,
          5.8515998,
        ],
        [
          7.1119374,
          5.8291738,
        ],
        [
          7.6753047,
          6.0207548,
        ],
        [
          7.4972016,
          6.9063399,
        ],
        [
          5.9667641,
          7.1315763,
        ],
        [
          3.0189529,
          7.2652165,
        ],
        [
          -9.7358199e-16,
          7.3076661,
        ],
        [
          -3.0189529,
          7.2652165,
        ],
        [
          -5.9667641,
          7.1315763,
        ],
        [
          -7.4972016,
          6.9063399,
        ],
        [
          -7.6753047,
          6.0207548,
        ],
        [
          -7.1119374,
          5.8291738,
        ],
        [
          -3.6204677,
          5.8515998,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          7.6424752,
          -0.047376637,
        ],
        [
          7.6753047,
          0.73329801,
        ],
        [
          7.4700277,
          1.0376129,
        ],
        [
          0,
          1.434625,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          1.3705392,
        ],
        [
          9.7762341,
          1.3009764,
        ],
        [
          19.203522,
          1.1685613,
        ],
        [
          20.919414,
          1.7121045,
        ],
        [
          20.101893,
          3.9294738,
        ],
        [
          16.05963,
          4.9771565,
        ],
        [
          8.1435784,
          5.8770498,
        ],
        [
          -1.6733331e-15,
          6.233889,
        ],
        [
          -8.1435784,
          5.8770498,
        ],
        [
          -16.05963,
          4.9771565,
        ],
        [
          -20.101893,
          3.9294738,
        ],
        [
          -20.919414,
          1.7121045,
        ],
        [
          -19.203522,
          1.1685613,
        ],
        [
          -9.7762341,
          1.3009764,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          20.104402,
          -0.21639625,
        ],
        [
          20.919414,
          1.1832157,
        ],
        [
          18.404527,
          3.0879335,
        ],
        [
          0,
          4.8633497,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          0.000039185233,
        ],
        [
          10.980445,
          -0.085770271,
        ],
        [
          21.568716,
          -0.25388547,
        ],
        [
          23.472343,
          0.66368011,
        ],
        [
          22.52311,
          3.0970611,
        ],
        [
          18.01733,
          4.3852254,
        ],
        [
          9.1447999,
          5.5379952,
        ],
        [
          3.5767024e-15,
          5.964226,
        ],
        [
          -9.1447999,
          5.5379952,
        ],
        [
          -18.01733,
          4.3852254,
        ],
        [
          -22.52311,
          3.0970611,
        ],
        [
          -23.472343,
          0.66368011,
        ],
        [
          -21.568716,
          -0.25388547,
        ],
        [
          -10.980445,
          -0.085770271,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          21.888238,
          -0.25977164,
        ],
        [
          23.472343,
          1.4054183,
        ],
        [
          18.406679,
          4.2873404,
        ],
        [
          0,
          5.9641868,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          1.7374763,
        ],
        [
          8.8498551,
          1.721146,
        ],
        [
          17.384234,
          1.6891051,
        ],
        [
          18.966448,
          2.3768304,
        ],
        [
          18.189284,
          4.2948386,
        ],
        [
          14.540182,
          5.2757447,
        ],
        [
          7.3743472,
          6.0762955,
        ],
        [
          8.778086e-16,
          6.3368289,
        ],
        [
          -7.3743472,
          6.0762955,
        ],
        [
          -14.540182,
          5.2757447,
        ],
        [
          -18.189284,
          4.2948386,
        ],
        [
          -18.966448,
          2.3768304,
        ],
        [
          -17.384234,
          1.6891051,
        ],
        [
          -8.8498551,
          1.721146,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          17.607051,
          -0.04970138,
        ],
        [
          18.966448,
          1.2344294,
        ],
        [
          14.87322,
          3.4568575,
        ],
        [
          0,
          4.5993526,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          11.351835,
        ],
        [
          1.4587434,
          11.35386,
        ],
        [
          2.865517,
          11.355792,
        ],
        [
          3.0369703,
          11.494606,
        ],
        [
          2.9849319,
          11.868803,
        ],
        [
          2.4023425,
          12.046794,
        ],
        [
          1.2159499,
          12.12495,
        ],
        [
          1.7035632e-15,
          12.159751,
        ],
        [
          -1.2159499,
          12.12495,
        ],
        [
          -2.4023425,
          12.046794,
        ],
        [
          -2.9849319,
          11.868803,
        ],
        [
          -3.0369703,
          11.494606,
        ],
        [
          -2.865517,
          11.355792,
        ],
        [
          -1.4587434,
          11.35386,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          3.0242354,
          0.0041575512,
        ],
        [
          3.0369327,
          0.38123907,
        ],
        [
          2.7646405,
          0.64647181,
        ],
        [
          0,
          0.80791626,
        ],
      ],
    },
  ],
  "volume": 27369.656,
}
`;

exports[`characterization: lofting + tessellation > thin rails: mesh at 0.5 cm faces 1`] = `
{
  "indexChecksum": 21608440469,
  "max": [
    100,
    24.999475,
    6,
  ],
  "min": [
    0,
    -24.999475,
    0.000063159976,
  ],
  "normalSum": [
    -0.0000015873925,
    7.6978522e-7,
    104.88752,
  ],
  "positionSum": [
    2120100,
    0,
    147193.87,
  ],
  "steps": {
    "lengthSteps": 200,
    "ringSteps": 214,
  },
  "triangles": 84800,
  "vertices": 42402,
}
`;

exports[`characterization: lofting + tessellation > thin rails: mesh at 1.5 cm faces 1`] = `
{
  "indexChecksum": 265219990,
  "max": [
    100,
    25,
    6,
  ],
  "min": [
    0,
    -25,
    7.2701422e-32,
  ],
  "normalSum": [
    -3.2366427e-7,
    -4.9790327e-9,
    11.882378,
  ],
  "positionSum": [
    234600,
    0,
    16325.926,
  ],
  "steps": {
    "lengthSteps": 67,
    "ringSteps": 72,
  },
  "triangles": 9380,
  "vertices": 4692,
}
`;

exports[`characterization: lofting + tessellation > thin rails: specs, sections and lofted rings 1`] = `
{
  "area": 3520.0068,
  "centerOfMass": 49.999415,
  "length": 100,
  "maxThickness": 6,
  "maxWidth": 50,
  "stations": [
    {
      "f": 0.02,
      "ring": [
        [
          0,
          3.7209274,
        ],
        [
          1.0010282,
          3.7495321,
        ],
        [
          1.9834819,
          3.8480002,
        ],
        [
          2.7658183,
          4.0972135,
        ],
        [
          2.7658183,
          4.2710537,
        ],
        [
          1.9834819,
          4.520267,
        ],
        [
          1.0010282,
          4.6187351,
        ],
        [
          -9.0146541e-16,
          4.6473399,
        ],
        [
          -1.0010282,
          4.6187351,
        ],
        [
          -1.9834819,
          4.520267,
        ],
        [
          -2.7658183,
          4.2710537,
        ],
        [
          -2.7658183,
          4.0972135,
        ],
        [
          -1.9834819,
          3.8480002,
        ],
        [
          -1.0010282,
          3.7495321,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          2.7658183,
          0.46320622,
        ],
        [
          0,
          0.92641244,
        ],
      ],
    },
    {
      "f": 0.25,
      "ring": [
        [
          0,
          0.95,
        ],
        [
          7.1154633,
          1.0955502,
        ],
        [
          14.11589,
          1.5941396,
        ],
        [
          19.852629,
          2.8488631,
        ],
        [
          19.852629,
          3.9136369,
        ],
        [
          14.11589,
          5.1683604,
        ],
        [
          7.1154633,
          5.6669498,
        ],
        [
          0,
          5.8125,
        ],
        [
          -7.1154633,
          5.6669498,
        ],
        [
          -14.11589,
          5.1683604,
        ],
        [
          -19.852629,
          3.9136369,
        ],
        [
          -19.852629,
          2.8488631,
        ],
        [
          -14.11589,
          1.5941396,
        ],
        [
          -7.1154633,
          1.0955502,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          19.852629,
          2.43125,
        ],
        [
          0,
          4.8625,
        ],
      ],
    },
    {
      "f": 0.5,
      "ring": [
        [
          0,
          1.7763568e-15,
        ],
        [
          8.9565608,
          0.17931816,
        ],
        [
          17.769255,
          0.79347457,
        ],
        [
          25,
          2.3378031,
        ],
        [
          25,
          3.6621969,
        ],
        [
          17.769255,
          5.2065254,
        ],
        [
          8.9565608,
          5.8206818,
        ],
        [
          0,
          6,
        ],
        [
          -8.9565608,
          5.8206818,
        ],
        [
          -17.769255,
          5.2065254,
        ],
        [
          -25,
          3.6621969,
        ],
        [
          -25,
          2.3378031,
        ],
        [
          -17.769255,
          0.79347457,
        ],
        [
          -8.9565608,
          0.17931816,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          25,
          3,
        ],
        [
          0,
          6,
        ],
      ],
    },
    {
      "f": 0.75,
      "ring": [
        [
          0,
          0.95,
        ],
        [
          7.1154633,
          1.0955502,
        ],
        [
          14.11589,
          1.5941396,
        ],
        [
          19.852629,
          2.8488631,
        ],
        [
          19.852629,
          3.9136369,
        ],
        [
          14.11589,
          5.1683604,
        ],
        [
          7.1154633,
          5.6669498,
        ],
        [
          0,
          5.8125,
        ],
        [
          -7.1154633,
          5.6669498,
        ],
        [
          -14.11589,
          5.1683604,
        ],
        [
          -19.852629,
          3.9136369,
        ],
        [
          -19.852629,
          2.8488631,
        ],
        [
          -14.11589,
          1.5941396,
        ],
        [
          -7.1154633,
          1.0955502,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          19.852629,
          2.43125,
        ],
        [
          0,
          4.8625,
        ],
      ],
    },
    {
      "f": 0.98,
      "ring": [
        [
          0,
          3.7209274,
        ],
        [
          1.0010282,
          3.7495321,
        ],
        [
          1.9834819,
          3.8480002,
        ],
        [
          2.7658183,
          4.0972135,
        ],
        [
          2.7658183,
          4.2710537,
        ],
        [
          1.9834819,
          4.520267,
        ],
        [
          1.0010282,
          4.6187351,
        ],
        [
          0,
          4.6473399,
        ],
        [
          -1.0010282,
          4.6187351,
        ],
        [
          -1.9834819,
          4.520267,
        ],
        [
          -2.7658183,
          4.2710537,
        ],
        [
          -2.7658183,
          4.0972135,
        ],
        [
          -1.9834819,
          3.8480002,
        ],
        [
          -1.0010282,
          3.7495321,
        ],
      ],
      "section": [
        [
          0,
          0,
        ],
        [
          2.7658183,
          0.46320622,
        ],
        [
          0,
          0.92641244,
        ],
      ],
    },
  ],
  "volume": 13802.689,
}
`;
